...

@implementation TSImportResourceViewController

- (void)viewDidLoad {
    [super viewDidLoad];
    
    self.title = @"Import Resources";
    
    UIBarButtonItem *item = [[UIBarButtonItem alloc] initWithTitle:@"Close"
                                                             style:UIBarButtonItemStylePlain
                                                            target:self
                                                            action:@selector(closeBarButtonItemTapped)];
    
    self.navigationItem.leftBarButtonItem = item;
    
...
